--- a/sondage/templates/sondage/index.html
+++ b/sondage/templates/sondage/index.html
@@ -8,11 +8,13 @@
     {% if latest_question_list %}
         <ul>
             {% for question in latest_question_list %}
-                <li><a href="{%url 'detail' question.id%}">{{question.question_text}}</a></li>
+                <li><a href="{%url 'sondage:detail' question.id%}">{{question.question_text}}</a></li>
             {% endfor%}
         </ul>
     {%else%}
         <p> Pas de sondage.</p>
     {%endif%}
+    <br>
+    <p><a href="{%url 'logout'%}">Log out</a></p>
 </body>
 </html>
