add base template

--- a/sondage/templates/sondage/index.html
+++ b/sondage/templates/sondage/index.html
@@ -12,7 +12,7 @@
             {% endfor%}
         </ul>
     {%else%}
-        <p> Pas de sondage.</p>
+        <p> Pas de sondages.</p>
     {%endif%}
     <br>
     <p><a href="{%url 'logout'%}">Log out</a></p>
