--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,12 @@
     <title>Sondage avex Django{%block title%}{%endblock%}</title>
 </head>
 <body>
+  <!--NavBar-->
+  <nav class="navbar navbar-dark bg-primary mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="/">Home</a>
+    </div>
+  </nav>
   <div class="container">
     <div class="row">
       <div class=".col-md-6 m-auto">
